feat(back): add teams and perms
